# color-mixer

./: Cargo.toml
src/: main.rs  strip.rs
