[package]
name = "color-mixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.9.1", features=["derive"]}
palette = "0.6.0"
simple-easing = "1.0.0"
dioxus = { version = "0.2.4", features = ["web"] }
log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.19", features = ["wasmbind"] }
gloo =  { version = "0.8", features = ["futures"] }
